--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Werewolf Hangman</title>
-    <script src="assets/javascript/game.js/"></script>
+    <script src="assets/javascript/game.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/reset.css">
 
@@ -20,7 +20,7 @@
 
     <p id="guessesRemaining">Number of Guesses Remaining: </p>
 
-    <p id="lettersGuessed">Leters Already Guessed: </p>
+    <p id="lettersGuessed">Letters Already Guessed: </p>
 
 </body>
 
