--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <h2>Press any key to get started.</h2>
 
+    <p id="word">Word: </p>
+
     <p id="wins">Wins: </p>
 
     <p id="guessesRemaining">Number of Guesses Remaining: </p>
