--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Werewolf Hangman</title>
     <script src="assets/javascript/game.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/reset.css">
+    <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
 
 </head>
 
@@ -14,15 +14,44 @@
 
     <h1>Welcome to Werewolf Hangman!</h1>
 
-    <h2>Press any key to get started.</h2>
+    <div id="left-side">
 
-    <p id="word">Word: </p>
+        <div id="moon imagery">
+            <img id="moon1" src="assets/images/moon_1.JPG" alt="moon_1" height=200px width=200px>
+            <img id="moon2" src="assets/images/moon_2.JPG" alt="moon_2" height=200px width=200px>
+            <img id="moon3" src="assets/images/moon_3.JPG" alt="moon_3" height=200px width=200px>
+            <img id="moon4" src="assets/images/moon_4.JPG" alt="moon_4" height=200px width=200px>
+            <img id="moon5" src="assets/images/moon_5.JPG" alt="moon_5" height=200px width=200px>
+            <img id="moon6" src="assets/images/moon_6.JPG" alt="moon_6" height=200px width=200px>
+            <img id="moon7" src="assets/images/moon_7.JPG" alt="moon_7" height=200px width=200px>
+            <img id="moon8" src="assets/images/moon_8.JPG" alt="moon_8" height=200px width=200px>
+            <img id="moon9" src="assets/images/moon_9.JPG" alt="moon_9" height=200px width=200px>
+            <img id="moon10" src="assets/images/moon_10.JPG" alt="moon_10" height=200px width=200px>
+            <img id="moon11" src="assets/images/moon_11.JPG" alt="moon_11" height=200px width=200px>
+            <img id="moon12" src="assets/images/moon_12.JPG" alt="moon_12" height=200px width=200px>
+        </div>
 
-    <p id="wins">Wins: </p>
+        <div id="human">
+            <img id="man" src="assets/images/man.jpg" alt="clipart man" height=250px width=120px>
+            <img id="werewolf" src="assets/images/werewolf.jpg" alt="werewolf" height=250px width=160px>
+            <img id="puppy" src="assets/images/puppy.jpg" alt="husky puppy" height=250px width=220px>
+        </div>
+    </div>
 
-    <p id="guessesRemaining">Number of Guesses Remaining: </p>
 
-    <p id="lettersGuessed">Letters Already Guessed: </p>
+    <div id="right-side">
+
+        <h2>Press any key to get started.</h2>
+
+        <p id="word">Word: </p>
+
+        <p id="wins">Wins: </p>
+
+        <p id="guessesRemaining">Number of Guesses Remaining: </p>
+
+        <p id="lettersGuessed">Letters Already Guessed: </p>
+
+    </div>
 
 </body>
 
