--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <div id="human">
-            <img id="man" src="assets/images/man.jpg" alt="clipart man" height=250px width=120px>
+            <img id="man" src="assets/images/man.png" alt="clipart man" height=270px width=240px>
             <img id="werewolf" src="assets/images/werewolf.jpg" alt="werewolf" height=250px width=160px>
             <img id="puppy" src="assets/images/puppy.jpg" alt="husky puppy" height=250px width=220px>
         </div>
