--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img id="moon10" src="assets/images/moon_10.JPG" alt="moon_10" height=200px width=200px>
             <img id="moon11" src="assets/images/moon_11.JPG" alt="moon_11" height=200px width=200px>
             <img id="moon12" src="assets/images/moon_12.JPG" alt="moon_12" height=200px width=200px>
-            <img id="moon13" src="assets/images/moon_13.JPG" alt="moon_13" height=200px width=200px>
+            <img id="moon13" src="assets/images/moon_13.jpg" alt="moon_13" height=200px width=200px>
         </div>
 
         <div id="human">
