--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
         <div id="human">
             <img id="man" src="assets/images/man.png" alt="clipart man" height=270px width=240px>
-            <img id="werewolf" src="assets/images/werewolf.jpg" alt="werewolf" height=250px width=160px>
+            <img id="werewolf" src="assets/images/werewolf_2.png" alt="werewolf" height=250px width=180px>
+            <img id="puppy" src="assets/images/puppy.png" alt="puppy" height=210px width=200px>
         </div>
     </div>
 
